packages/devops/cicd/tekton/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd
  labels:
    name: cicd
    app.kubernetes.io/part-of: banking
    tekton: enabled
